--- a/app/src/main/res/layout/activity_create_zone.xml
+++ b/app/src/main/res/layout/activity_create_zone.xml
@@ -44,6 +44,7 @@
         android:text="Upload The Zone"
         android:layout_alignParentRight="true" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -115,6 +116,15 @@
             android:text="Others"
             android:textSize="30dp" />
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/detected_objects"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="TextView" />
 
 
 </RelativeLayout>
